flux/platform/cert-manager/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: controller
spec:
  endpointSelector:
    matchLabels:
      app: cert-manager
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cert-manager
        app: webhook
    toPorts:
    - ports:
      - port: "10250"
        protocol: TCP
      - port: "6443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cert-manager
        app: infomaniak-webhook
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 192.168.0.0/16
